# spring-profile-resolver

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
example-sb-app/: .gitignore  README.md  build.gradle  settings.gradle
example-sb-app/src/main/resources/: application-aws.yml  application-dev.yml  application-gcp.yml  application-local.yml  application-prod.yml  application-staging.yml  application.yml
example-sb-app/src/test/resources/: application.yml
scripts/: reinstall-local.sh
src/spring_profile_resolver/: __init__.py  cli.py  env_vars.py  exceptions.py  expressions.py  imports.py  linting.py  merger.py  models.py  output.py  parser.py  placeholders.py  profiles.py  properties_parser.py  resolver.py  security.py  validation.py  vcap_services.py
test-fixtures/comment-refinement/: application-prod.yml  application.yml
test-fixtures/edge-cases/circular-groups/: application.yml
test-fixtures/edge-cases/deep-nesting/: application.yml
test-fixtures/edge-cases/invalid-yaml/: application.yml
test-fixtures/edge-cases/unicode/: application.yml
test-fixtures/edge-cases/yaml-features/: application.yml
test-fixtures/mixed-formats/src/main/resources/: application.properties  application.yml
test-fixtures/multi-document/: application.yml
test-fixtures/simple/: application-dev.yml  application-prod.yml  application.yml
test-fixtures/with-groups/: application-postgres.yml  application-prod.yml  application-prodmq.yml  application.yml
test-fixtures/with-placeholders/: application.yml
test-fixtures/with-properties/src/main/resources/: application-prod.properties  application.properties
test-fixtures/with-test-resources/src/main/resources/: application-prod.yml  application.yml
test-fixtures/with-test-resources/src/test/resources/: application-prod.yml  application.yml
tests/: conftest.py  test_edge_cases.py  test_env_vars.py  test_expressions.py  test_imports.py  test_integration.py  test_linting.py  test_merger.py  test_models.py  test_output.py  test_parser.py  test_placeholders.py  test_profiles.py  test_properties_parser.py  test_security.py  test_validation.py  test_vcap_services.py
(+14 files in other folders)
